# nix-python-devenv

./: .gitignore  README.md  devenv.nix  flake.nix  hello.py  pyproject.toml
