[tool.poetry]
name = "nix-python-devenv"
version = "0.1.0"
description = ""
authors = ["clementpoiret <poiret.clement@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cuda12"], version = "^0.4.31"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
